# quartility

./: .gitignore  LICENSE  bump_version.py  setup.cfg
quartility/: __init__.py  core.py  pdf_helper.py  pio2zip.py
tests/: test_quartility.py
