[metadata]
name = quartility
version = 0.1.2
author = Simon Mariacher
description = Utilities for Quarto lecture scripts (PDF embedding, SPICE sims, etc.)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smariacher/quartility
license = MIT
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Intended Audience :: Education
	Topic :: Education
	Topic :: Scientific/Engineering

[options]
package_dir = 
	= .
packages = find:
python_requires = >=3.8
install_requires = 
	asttokens >=3.0.0
	colorama >=0.4.6
	decorator >=5.2.1
	executing >=2.2.1
	ipython >=9.5.0
	ipython_pygments_lexers >=1.1.1
	jedi >=0.19.2
	matplotlib-inline >=0.1.7
	parso >=0.8.5
	prompt_toolkit >=3.0.52
	pure_eval >=0.2.3
	Pygments >=2.19.2
	PyPDF2 >=3.0.1
	stack-data >=0.6.3
	traitlets >=5.14.3
	typing_extensions >=4.15.0
	wcwidth >=0.2.13

